--- a/templates/tasks/list.html
+++ b/templates/tasks/list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}My Tasks - Project Manager{% endblock %}
+{% block title %}My Tasks - Rudhisphere{% endblock %}
 
 {% block content %}
 <div class="container-fluid mt-4">
@@ -10,9 +10,9 @@
             <a href="{{ url_for('new_task') }}" class="btn btn-primary">
                 <i class="bi bi-plus me-1"></i>New Task
             </a>
-            <a href="{{ url_for('all_tasks') }}" class="btn btn-outline-secondary">
+            <!-- <a href="{{ url_for('all_tasks') }}" class="btn btn-outline-secondary">
                 <i class="bi bi-collection me-1"></i>All Tasks
-            </a>
+            </a> -->
         </div>
     </div>
 
