--- a/templates/tasks/all_tasks.html
+++ b/templates/tasks/all_tasks.html
@@ -33,8 +33,8 @@
                     </select>
                 </div>
                 <div class="col-md-4 d-flex align-items-end">
-                    <!-- <a href="{{ url_for('all_tasks') }}" class="btn btn-outline-secondary">
-                        <i class="bi bi-arrow-clockwise me-1"></i>Clear Filter -->
+                    <a href="{{ url_for('all_tasks') }}" class="btn btn-outline-secondary">
+                        <i class="bi bi-arrow-clockwise me-1"></i>Clear Filter
                     </a>
                 </div>
             </form>
