--- a/templates/tasks/list.html
+++ b/templates/tasks/list.html
@@ -116,9 +116,9 @@
             <a href="{{ url_for('new_task') }}" class="btn btn-primary">
                 <i class="bi bi-plus me-1"></i>Create Task
             </a>
-            <a href="{{ url_for('all_tasks') }}" class="btn btn-outline-secondary">
+            <!-- <a href="{{ url_for('all_tasks') }}" class="btn btn-outline-secondary">
                 <i class="bi bi-collection me-1"></i>View All Tasks
-            </a>
+            </a> -->
         </div>
     </div>
     {% endif %}
